--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-build-manager": "^1.4.2",
     "react-native-elements": "^3.4.2",
     "react-native-pager-view": "6.0.1",
     "react-native-vector-icons": "^9.2.0",
